# psquare

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/bioage/: compute.py  face_age.py  questionnaire.py  reversal_plan.py  session.py
app/conversation/: checkins.py  lessons.py  state_machine.py
app/db/: __init__.py  models.py
app/heart/: bp_log.py  framingham.py  habits.py  heart_age.py  lab_cadence.py  meal_suggester.py  qrisk3.py  rhr_log.py  score.py  scoreboard.py  smoker_protocol.py  steps_log.py  stress_practice.py  workout_planner.py
app/medical_knowledge/: bioage_weights.py  heart_age_table.py  hrv_norms.py  indian_thresholds.py  red_flags.py  reference_ranges.py  risk_scores.py  sources.md
app/ppg/: interpreter.py  session.py  signal_validator.py  stress_index.py
app/reports/: __init__.py  dial.py  pdf_builder.py
app/reports/templates/: report.html
app/utils/: gemini_client.py  privacy.py  safety.py  storage.py
app/whatsapp/: __init__.py  adapter_base.py  adapter_meta.py  adapter_twilio.py  router.py
miniapp/: index.html  package.json
miniapp/src/: main.tsx
miniapp/src/routes/: FaceCapture.tsx  PpgScan.tsx
scripts/: seed_demo_user.py
