[project]
name = "psquare"
version = "1.1.0"
description = "P Square - Hyper-Personalized Cardiovascular & Longevity Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "google-generativeai>=0.4.0",
    "structlog>=24.1.0",
    "sentry-sdk[fastapi]>=1.40.0",
    "weasyprint>=60.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "jinja2>=3.1.0",
    "python-jose[cryptography]>=3.3.0",
    "pillow>=10.2.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "vcrpy>=4.4.0",
    "playwright>=1.41.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]